--- a/package.json
+++ b/package.json
@@ -4,9 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@types/node": "^14.14.0",
+    "jest": "^26.6.0",
+    "ts-jest": "^26.4.1",
+    "ts-node-dev": "^1.0.0",
+    "typescript": "^4.0.3"
+  }
 }
