--- a/package.json
+++ b/package.json
@@ -10,10 +10,16 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/jest": "^26.0.15",
     "@types/node": "^14.14.0",
     "jest": "^26.6.0",
     "ts-jest": "^26.4.1",
     "ts-node-dev": "^1.0.0",
     "typescript": "^4.0.3"
+  },
+  "dependencies": {
+    "knex": "^0.21.6",
+    "mysql": "^2.18.1",
+    "sqlite3": "^5.0.0"
   }
 }
