--- a/package.json
+++ b/package.json
@@ -10,14 +10,19 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.8",
     "@types/jest": "^26.0.15",
     "@types/node": "^14.14.0",
+    "@types/supertest": "^2.0.10",
     "jest": "^26.6.0",
+    "jest-mock-extended": "^1.0.10",
+    "supertest": "^5.0.0",
     "ts-jest": "^26.4.1",
     "ts-node-dev": "^1.0.0",
     "typescript": "^4.0.3"
   },
   "dependencies": {
+    "express": "^4.17.1",
     "knex": "^0.21.6",
     "mysql": "^2.18.1",
     "sqlite3": "^5.0.0"
