--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "start": "tsnd --transpile-only --ignore-watch node_modules --respawn src/index.ts"
   },
   "keywords": [],
   "author": "",
