--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "start": "tsnd --transpile-only --ignore-watch node_modules --respawn src/index.ts"
+    "start": "tsnd --transpile-only --ignore-watch node_modules --respawn src/index.ts",
+    "build": "webpack",
+    "start:prod": "npm run build && node dist/index.js",
+    "knex:migrate:dev": "knex migrate:latest --env development",
+    "knex:migrate:prod": "knex migrate:latest --env production"
   },
   "keywords": [],
   "author": "",
@@ -19,16 +23,20 @@
     "jest": "^26.6.0",
     "jest-express": "^1.12.0",
     "jest-mock-extended": "^1.0.10",
+    "sqlite3": "^5.0.0",
     "supertest": "^5.0.0",
     "ts-jest": "^26.4.1",
+    "ts-loader": "^8.0.7",
     "ts-node-dev": "^1.0.0",
-    "typescript": "^4.0.3"
+    "typescript": "^4.0.3",
+    "webpack": "^5.2.0",
+    "webpack-cli": "^4.1.0",
+    "webpack-node-externals": "^2.5.2"
   },
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "knex": "^0.21.6",
-    "mysql": "^2.18.1",
-    "sqlite3": "^5.0.0"
+    "mysql2": "^2.2.5"
   }
 }
